--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -4,34 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/logo.png'%}">
     <title>Cadastro | Smoothflow</title>
     <!--Stylesheet Local-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!--Bootstrap Stylesheet-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
     
     <div class="container-fluid main-login">
         <div class="row row-login">
             <div class="col-md-7 d-none d-md-block side-image" id="bg-cadastro">
-                <a href="/"><img class="logo-login" src="{% static 'imgs/logo1-novo.png' %}" alt="Logo site"></a>
+                <a href="/"><img class="logo-login" src="{% static 'imgs/logo.png' %}" alt="Logo site"></a>
                 <div class="text-login">
                     <p>Transforme seus dias caóticos em uma dança organizada com nosso site de gestão de tarefas</p>
                 </div>
             </div>
             <div class="col-md-5 right-side">
                 <form class="input-box" name="login-form" method="post" action="{% url 'cadastro' %}">{% csrf_token %}
-                    {% if messages %}
                     <ul class="messages">
-                        {% for message in messages%}
-                            <li {% if message.tags %}class="alert alert-{{  message.tags }}"{% endif %}>{{ message }}</li>
-                        {% endfor %}
+                        {% if messages %}
+                            {% for message in messages%}
+                                <li {% if message.tags %}class="alert alert-{{  message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        {% endif %}
                     </ul>
-                    {% endif %}
                     <header>Cadastro</header>
                     <div class="input-field">
-                        <input type="text" class="input" name="user-email" id="user-email" required>
+                        <input type="email" class="input" name="user-email" id="user-email" required>
                         <label for="user-email">Email</label>
                     </div>
                     <div class="input-field">
@@ -43,17 +45,13 @@
                         <label for="user-username">Nome de usuario</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="input" name="user-pwd" id="user-pwd" min="8" required>
+                        <input type="password" class="input" name="user-pwd" id="user-pwd" onchange="verificaSenha()" minlength="8" required>
                         <label for="user-pwd">Senha de 8 digitos</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="input" name="confirm-pwd" id="confirm-pwd" min="8" onchange="verificaSenha()" required>
+                        <input type="password" class="input" name="confirm-pwd" id="confirm-pwd" onchange="verificaSenha()" minlength="8" required>
                         <label for="confirm-pwd">Confirmar senha</label>
                     </div>
-                    <!--div class="input-field-checkbox">
-                        <input type="checkbox" class="input-checkbox" name="terms-of-use" id="terms-of-use" required>
-                        <label for="terms-of-use">Aceito os termos de uso. <a href="#">Leia os termos de uso.</a></label>
-                    </div-->
                     <div class="input-field">
                         <input type="submit" class="submit" value="Cadastrar">
                     </div>
@@ -67,6 +65,6 @@
 
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="{% static 'js/script.css' %}" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
