--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -6,17 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Smoothflow</title>
-
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/logo.png'%}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    <!--Bootstrap Stylesheet-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <div class="container-fluid main-login">
         <div class="row row-login">
             <div class="col-md-7 d-none d-md-block side-image" id="bg-login">
-                <a href="/"><img class="logo-login" src="{% static 'imgs/logo1-novo.png' %}" alt="Logo site"></a>
+                <a href="/"><img class="logo-login" src="{% static 'imgs/logo.png' %}" alt="Logo site"></a>
                 <div class="text-login">
                     <p>Transforme seus dias caóticos em uma dança organizada com nosso site de gestão de tarefas</p>
                 </div>
